--- a/core/client/assets/sass/modules/mixins.scss
+++ b/core/client/assets/sass/modules/mixins.scss
@@ -184,15 +184,15 @@ $green: #9FBB58;
     }
 }
 
-/* =============================================================================
-   Animations
-   ============================================================================= */
+// =============================================================================
+//    Animations
+//    =============================================================================
 
-@include keyframes(fade-out) {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
+// @include keyframes(fade-out) {
+//     from {
+//         opacity: 1;
+//     }
+//     to {
+//         opacity: 0;
+//     }
+// }
